#include "GameStatusMonitor.h"

class Renderer {
public:
    Renderer();
    void render(GameStatusMonitor& gameStatusMonitor);
};